# DESDecryption

./: .gitignore  README.md
Code/Parallel/Cuda/: main.cu
Code/Parallel/Cuda/des/: des.h
Code/Parallel/OpenMP/: Decrypter.cpp  Decrypter.h  main.cpp
Code/Sequential/C/: README.md  main.c
Dictionaries/: README.md  generate.py
Parallel/Cuda/: README.md  utils.cuh
Parallel/Cuda/des/: bit_utils.h
Parallel/OpenMP/: CMakeLists.txt  README.md
Report/: plot.py
Report/Keynote/: presentazione.key
Report/Latex/: bibliografia.bib  relazione.tex
Report/Latex/Plots/: plot.py
Sequential/C/: CMakeLists.txt  main.c
